network/policy/allow-pod-to-pod-x-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-pod-to-pod-x-namespace
spec:
  podSelector:
    matchLabels:
      app: hello2
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: net-project-1
        podSelector:
          matchLabels:
            app: client1
